# geodarn

./: .gitmodules  README.md  setup.cfg
_custom_build/: backend.py
geodarn/: extract_records.py  file_ops.py  geolocation.py  gridding.py  plotting.py  process_file.py  reading_fitacf.py
geodarn/utils/: __init__.py  fitacf_format.py  formats.py  parse_hdw.py
scripts/: modify_fitacf.py  process_fitacf_directory.py
src/geodarn/: __init__.py  extract_records.py  formats.py  geolocation.py  gridding.py  parse_hdw.py  plotting.py  process_file.py
src/geodarn/utils/: constants.py  extract_records.py  fitacf_format.py  formats.py
