[metadata]
name = "geodarn"
version = "0.1.0"
description = "Geolocation Library for SuperDARN Data"
readme = "README.md"
authors = [{name = "Remington Rohel"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
keywords = ["geolocation", "SuperDARN"]

[options]
install_requires = ["numpy", "pydarnio", "shapely", "cartopy"]
requires-python = ">=3.8"
package_dir =
    =geodarn
packages = find_namespace:

#[project.optional-dependencies]
#gpu = ["cupy"]
#test = ["matplotlib"]

[project.urls]
Homepage = "https://github.com/RemingtonRohel/geodarn"