[metadata]
name = geodarn
version = 0.1.0
description = Geolocation Library for SuperDARN Data
readme = README.md
authors = Remington Rohel
license = GNU General public License v3 (GPLv3)
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
keywords = geolocation, SuperDARN
url = https://github.com/RemingtonRohel/geodarn

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find_namespace:
install_requires =
    numpy
    pydarnio
    cartopy
    shapely

[options.packages.find]
where = src

